extending reports
green -> blue
extend fragment html
add fragment filter for prediction html
prediction: disable included
fix color bug if no weight
fix chembl info